bugfix | file routing

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -124,7 +124,7 @@ html {
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            background-image: url(./assets/images/hero-bio.jpg);
+            background-image: url(../assets/images/hero-bio.jpg);
             background-position: center;
             background-size: cover;
             width: 100%;
