--- a/styles/bio.css
+++ b/styles/bio.css
@@ -387,18 +387,18 @@ html .section__photo {
 }
 @media (max-width: 767px) {
   html .section__photo {
-    padding: 0 1rem;
+    padding: 0 1rem 2rem 1rem;
     margin: 0 -1rem;
   }
 }
 @media (min-width: 768px) {
   html .section__photo {
-    padding: 0 2rem;
+    padding: 0 2rem 2rem 2rem;
   }
 }
 @media (min-width: 1280px) {
   html .section__photo {
-    padding: 0 10rem;
+    padding: 0 10rem 2rem 1F0rem;
   }
 }
 html .section__photo-gallery {
@@ -481,6 +481,197 @@ html .grid__container--grid-items {
 }
 html .grid__container--grid-items:hover {
   filter: grayscale(0);
+}
+html .comment__section {
+  padding: 5vw 0vw;
+  width: 100%;
+  background-color: #fff;
+}
+html .comment__section--content {
+  padding: 5vw;
+  font-family: "Avenir Regular", sans-serif;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  html .comment__section--content {
+    width: 45vw;
+  }
+}
+@media (min-width: 768px) {
+  html .comment__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+html .comment--title {
+  margin-left: 2vw;
+}
+@media (min-width: 768px) {
+  html .comment--title {
+    margin: 5vw 0vw 5vw 5vw;
+    align-self: flex-start;
+  }
+}
+html .comment__label {
+  font-weight: 700;
+  font-size: 0.75rem;
+  color: #afafaf;
+}
+html .comment__text-area {
+  justify-content: center;
+  display: flex;
+  outline: none;
+  border: 1px solid #afafaf;
+  font-size: 1rem;
+  min-width: 14rem;
+  min-height: 6rem;
+  margin: 1rem 0;
+  border-radius: 4px;
+  width: 100%;
+}
+html .comment__text-area--name {
+  justify-content: center;
+  display: flex;
+  outline: none;
+  border: 1px solid #afafaf;
+  font-size: 1rem;
+  min-width: 14rem;
+  min-height: 36px;
+  margin: 1rem 0;
+  border-radius: 4px;
+  height: 1.5rem;
+  margin-top: 0.5rem;
+  width: 100%;
+}
+html .comment__text-area--name:focus {
+  border-color: #323232;
+}
+html .comment__text-area:focus {
+  border-color: #323232;
+}
+html .comment__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+@media (min-width: 768px) {
+  html .comment__form {
+    justify-content: center;
+  }
+}
+html .comment__form--item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  html .comment__form--item {
+    justify-content: center;
+  }
+}
+html .comment__form--item--input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
+}
+html .comment__name {
+  font-weight: 700;
+  font-size: 1rem;
+}
+html .comment__text {
+  font-family: "Avenir Regular", sans-serif;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+html .comment__item--title {
+  display: flex;
+  justify-content: space-between;
+}
+html .comment__wrapper {
+  display: flex;
+  justify-content: flex-start;
+  border-top: 1px solid #afafaf;
+  border-bottom: 1px solid #afafaf;
+  margin-bottom: -1px;
+  padding: 1rem 2rem;
+}
+html .comment__timestamp {
+  color: #afafaf;
+  margin-left: 1rem;
+  margin-bottom: 1.5rem;
+}
+html .comment__button {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 1rem;
+  border: none;
+  margin-bottom: 2rem;
+  font-size: 20px;
+  font-weight: 700;
+  min-width: 14rem;
+  width: 102%;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #323232;
+}
+html .comment__button:hover {
+  background-color: #000;
+}
+@media (min-width: 768px) {
+  html .comment__button {
+    max-width: 200px;
+    align-self: flex-end;
+  }
+}
+html .comment__input-error {
+  border: 1px solid #d22d2d;
+}
+html .comment__avatar {
+  border-radius: 50%;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
+  height: 36px;
+  width: 36px;
+  min-height: 36px;
+  min-width: 36px;
+}
+@media (min-width: 768px) {
+  html .comment__avatar {
+    height: 48px;
+    width: 48px;
+    min-height: 48px;
+    min-width: 48px;
+  }
+}
+html .comment__avatar--sender {
+  background-image: url("../assets/images/mohan-muruge.jpg");
+  background-size: cover;
+  background-color: #ff0000;
+  height: 36px;
+  width: 36px;
+  min-width: 36px;
+  border-radius: 50%;
+  margin: 1.75rem 0.5rem 0.5rem 0rem;
+}
+@media (min-width: 768px) {
+  html .comment__avatar--sender {
+    transition: 0.5s;
+    margin: 1.5rem;
+    height: 48px;
+    width: 48px;
+    min-width: 48px;
+  }
+}
+html .comments {
+  font-family: "Avenir Regular", sans-serif;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
 }
 html .footer__image--wrap {
   display: inline-block;
