feature | avatar images
older comments avatar images

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -714,6 +714,7 @@ html {
         width: 36px;
         min-height: 36px;
         min-width: 36px;
+        background-color: $secondary__band-mercury;
 
         @include for--tablet {
             height: 48px;
