--- a/styles/bio.css
+++ b/styles/bio.css
@@ -648,6 +648,7 @@ html .comment__avatar {
   width: 36px;
   min-height: 36px;
   min-width: 36px;
+  background-color: #e1e1e1;
 }
 @media (min-width: 768px) {
   html .comment__avatar {
